Finished basic UI and game logic

--- a/index.html
+++ b/index.html
@@ -22,10 +22,19 @@
                     <p>Computer chose:</p>
                     <p id="computer-output" class="choicecontent"></p>
                 </div>
-                <div class="result">
-                    <p id="result-text">Result text here that continues for a few words</p>
-                </div>
             </div>
+            <div class="result">
+                <p id="result-text"></p>
+                <h2 id="winner-display"></h2>
+            </div>
+            <div class="score">
+                <span id="score-label">You - Computer</span>
+                <br>
+                <span id="player-score-value">0</span>
+                <span id="spacer">-</span>
+                <span id="computer-score-value">0</span>
+            </div>
+            <a id="reset-button" class="button">Play Again</a>
     </div>
     <script src="game.js"></script>
     </body>
